# AEC-DETAIL-vision

./: README.md  construction_dataset.json  details_df.pkl  generate.py  main.py  pyproject.toml  scrape.py  test.py  upload.py
data/: construction_details_dataset.jsonl
